# 4JLibs

./: .gitignore  CMakeLists.txt  README.md
.github/: pull_request_template.md.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  other.md
Windows_Libs/Dev/Input/: INP_ForceFeedback.cpp  INP_Main.cpp  INP_Main.h  Input.vcxproj
Windows_Libs/Dev/Profile/: Profile.vcxproj
Windows_Libs/Dev/Render/: 4J_Render.cpp  Profiler.h  Render.vcxproj  Renderer.h  RendererCBuff.cpp  RendererCore.cpp  RendererMatrix.cpp  RendererState.cpp  RendererTexture.cpp  RendererVertex.cpp
Windows_Libs/Dev/Render/libpng/: png.h  pnglibconf.h  pngwrite.c
Windows_Libs/Dev/Storage/: 4J_Storage.cpp  STO_SaveGame.cpp  Storage.vcxproj
impls/Windows_Libs/: CMakeLists.txt
impls/Windows_Libs/Input/: CMakeLists.txt
impls/Windows_Libs/Profile/: CMakeLists.txt
impls/Windows_Libs/Render/: CMakeLists.txt
impls/Windows_Libs/Storage/: CMakeLists.txt
inc/: 4J_Storage.h
libs/: 4J_Input.lib  4J_Profile.lib  4J_Storage.lib
